--- a/homework1.tex
+++ b/homework1.tex
@@ -22,8 +22,8 @@ FPGA 的核心内容就是“查找表”的方式控制“组成电路”。FPG
 ISE Design Suite 是为 Spartan-6，Virtex-6与CoolRunner 提供设计。 Xilinx 官方提供了新的 Vivado Design Suite 针对新一代的器件全新设计。
 ISE Design Suite 包含对 FPGA 的设计测试功能，并能灵活的将各种 IP 核组合在一起满足一定的需要。
 
-\paragraph{C\lambda aSH}
-C\lambda aSH 是一个基于函数式编程语言 Haskell 设计制作的 FPGA 逻辑设计软件。
+\paragraph{$C\lambda aSH$}
+$C\lambda aSH$ 是一个基于函数式编程语言 Haskell 设计制作的 FPGA 逻辑设计软件。
 使用 Haskell 语言作为编程语言，提供了与 VHDL、VerilogSys 于 SystemVerilog 语言的生成功能。
 
 
