--- a/report1.tex
+++ b/report1.tex
@@ -186,7 +186,7 @@ Net "led[7]" IOSTANDARD = LVCMOS33;
         的 \verb|Generate Programming File|  双击之后会自动生成 二进制比特的配置文件。
         之后将开发版通过USB链接到电脑后。双击 \verb|Configure Target Device| 配置设备。
 
-        
+        对FPGA配置编程的时候，会打开一个窗口，初始化链之后可添加设备。然后将
 
 
 \end{document}
