--- a/report3.tex
+++ b/report3.tex
@@ -357,6 +357,8 @@ int main (void)
 
         然后在串口链接工具中可以看见输出的内容。
 
+        \section{心得}
+        整个实验中，使用的开发版与 ISE 的版本与书中的版本相差较大，但是打他相对还是可以完成。其中对于第三个实验中使用的 kcpsm3 在当前的 Windows 10 慢速更新预览版上无法使用且与 开发版不兼容问题，我尝试将 kcpsm6 按照实验要求完成。虽然总线位数不是问题，但是由于对系统不熟悉，最后移植的结果并不能让人满意，仿真无输出结果。最后只能通过其他方式进行实验，并仿真。
 
         
 \end{document}
