--- a/report3.tex
+++ b/report3.tex
@@ -178,10 +178,17 @@ int main()
         然后在JTAG 配置中，配置成 Diligent 的 USB。然后将之前生成好的文件通过
         \verb|Xilinx Tools -> Program FPGA|  中的选项配置好的比特流文件与生成的可执行的ELF文件，将其刷入 FPGA中。
 
-        然后在串口链接工具中可以看见输出的内容。
+        然后在串口链接工具中可以看见输出的内容，如图\ref{fig:report3-4}所示。
+
+\begin{figure}
+\centering
+\includegraphics[width=1\linewidth]{report3-4}
+\caption{输出结果}
+\label{fig:report3-4}
+\end{figure}
 
 
-        % Exp 3-1
+        % Exp 3-2
 
         \section{Xilinx 嵌入式下系统设计（II）}
         
@@ -211,7 +218,7 @@ int main()
       
         \begin{figure}[h!]
           \centering
-          \includegraphics{report3-3}
+          \includegraphics[width=1\linewidth]{report3-3}
           \caption{本次实验的内容}
           \label{fig:report3-3}
         \end{figure}
@@ -239,7 +246,7 @@ int main()
         实例。其中唯一不同的地方是数据总线的宽度为 8 位。
 
         点击 \verb|Ports| 标签，查看 DIP 与 PUSH 实例的端口链接。
-        删除两者 \verb|GPIO_IO| 端口的链接。并将 两者的 GPIO_IO_I 端口设置为外部端口。
+        删除两者 \verb|GPIO_IO| 端口的链接。并将 两者的 GPIO\_IO\_I 端口设置为外部端口。
         其中需要注意的是需要将 两个的端口的 \verb|Range| 属性设置成对应的 
         $[7:0]$ 与 $[3:0]$。
 
@@ -356,9 +363,17 @@ int main (void)
         \verb|Xilinx Tools -> Program FPGA|  中的选项配置好的比特流文件与生成的可执行的ELF文件，将其刷入 FPGA中。
 
         然后在串口链接工具中可以看见输出的内容。
+        
+        \begin{figure}
+\centering
+\includegraphics[width=1\linewidth]{report3-5}
+\caption{输出结果}
+\label{fig:report3-5}
+\end{figure}
 
-        \section{心得}
-        整个实验中，使用的开发版与 ISE 的版本与书中的版本相差较大，但是打他相对还是可以完成。其中对于第三个实验中使用的 kcpsm3 在当前的 Windows 10 慢速更新预览版上无法使用且与 开发版不兼容问题，我尝试将 kcpsm6 按照实验要求完成。虽然总线位数不是问题，但是由于对系统不熟悉，最后移植的结果并不能让人满意，仿真无输出结果。最后只能通过其他方式进行实验，并仿真。
+        
+
+
 
         
 \end{document}
