--- a/homework3.tex
+++ b/homework3.tex
@@ -12,6 +12,8 @@
 \begin{document}
     \maketitle
     \newpage
+    \tableofcontents
+    \newpage
     \section{Get Started}
     \label{sec:getstarted}
     
@@ -77,7 +79,7 @@ $ git clone git@github.com:Qinka/snake-vhdl.git
     Game logic unit control the logic of the game, iut check the state of the game and it can 
     be called as a state machine.
     
-    \section{Pre-Simulation}
+    \section{Simulation of Behavior}
     \label{sec:presimulation}
     
     This example do not provide test bench, so here, I need to write these test benches by myself.
@@ -444,6 +446,37 @@ END;
 \caption{Game Logic Simulation (3)}
 \label{fig:homework3-9}
 \end{figure}
+
+
+
+    \section{Simulation of Post-Place \& Route}
+    \label{sec:postsimulation}
+    
+    I just set each module as the top module, and then simulate the post-place \& route module.
+    
+    \subsection{Clock Unit}
+    \label{sec:ppr:clockunit}
+    
+    I just set the clock unit to the top module, and select \verb|Post-Route| in the \verb|Simulation|.
+    The general result of the simulation is figure \ref{fig:homework3-10}.
+    And the detail of the simulation is the figure \ref{fig:homework3-11}, and the delay of the signal
+    have not effect on the behavior.
+    
+    \begin{figure}
+\centering
+\includegraphics[width=1\linewidth]{homework3-10}
+\caption{Clock Unit Post-Route Simulation (1)}
+\label{fig:homework3-10}
+    \end{figure}
+
+    \begin{figure}
+\centering
+\includegraphics[width=1\linewidth]{homework3-11}
+\caption{Clock Unit Post-Route Simulation (2)}
+\label{fig:homework3-11}
+    \end{figure}
+
+
 
 
     
